--- a/css/punto1.css
+++ b/css/punto1.css
@@ -68,6 +68,26 @@ background-color: #999999;
   position: absolute;
   left: 50%;
   top: 50%;
-  margin: 450px 0 0 -50px;
+  margin: 400px 0 0 -50px;
 
+}
+#var1{
+  background-color: #999999;
+  color: white;
+}
+#var2{
+  background-color: #999999;
+  color: white;
+}
+#var3{
+  background-color: #999999;
+  color: white;
+}
+#var4{
+  background-color: #999999;
+  color: white;
+}
+#buton{
+  background-color: #999999;
+  color: white;
 }
