--- a/css/punto2.css
+++ b/css/punto2.css
@@ -26,16 +26,16 @@ body {
     display: none;
   }
   #div1{
-    width: 500px;
-    height: 500px;
+    width: 25%;
+    height: 25%;
     position: absolute;
     left: 50%;
     top: 50%;
     margin: -250px 0 0 -600px;
   }
   #div2{
-    width: 500px;
-    height: 500px;
+    width: 25%;
+    height: 25%;
     margin: 0 auto;
     position: absolute;
     left: 50%;
@@ -68,7 +68,7 @@ body {
     position: absolute;
     left: 50%;
     top: 50%;
-    margin: 400px 0 0 -50px;
+    margin: -400px 0 0 -50px;
 
   }
   #var1{
