--- a/css/punto1.css
+++ b/css/punto1.css
@@ -116,3 +116,9 @@ background-color: #999999;
   top: 50%;
   margin: 80px 0 0 -320px;
 }
+#text1{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin: -300px 0 0 -450px;
+}
