--- a/css/punto2.css
+++ b/css/punto2.css
@@ -120,3 +120,9 @@ body {
   top: 50%;
   margin: 80px 0 0 -320px;
 }
+#text1{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin: -300px 0 0 -550px;
+}
