--- a/css/punto1.css
+++ b/css/punto1.css
@@ -60,7 +60,7 @@ body {
   background-color: white;
 }
 #but{
-background-color: #999999;
+background-color: #d31111;
   color: white;
   width: 100px;
   height: 50px;
@@ -88,17 +88,19 @@ background-color: #999999;
   color: white;
 }
 #buton{
-  background-color: #999999;
+  background-color: #d31111;
   color: white;
 }
 #lab1{
   position: absolute;
+  font-weight: 900;
   left: 50%;
   top: 50%;
   margin: 370px 0 0 -100px;
 }
 #lab3{
   position: absolute;
+  font-weight: 900;
   left: 50%;
   top: 50%;
   margin: 80px 0 0 -320px;
@@ -106,12 +108,14 @@ background-color: #999999;
 
 #lab2{
   position: absolute;
+  font-weight: 900;
   left: 50%;
   top: 50%;
   margin: 370px 0 0 -100px;
 }
 #lab4{
   position: absolute;
+  font-weight: 900;
   left: 50%;
   top: 50%;
   margin: 80px 0 0 -320px;
